--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PKFinalWebGL.loader.js";
+      var loaderUrl = buildUrl + "/Build Two Electric Boogaloo.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PKFinalWebGL.data.br",
-        frameworkUrl: buildUrl + "/PKFinalWebGL.framework.js.br",
-        codeUrl: buildUrl + "/PKFinalWebGL.wasm.br",
+        dataUrl: buildUrl + "/Build Two Electric Boogaloo.data.br",
+        frameworkUrl: buildUrl + "/Build Two Electric Boogaloo.framework.js.br",
+        codeUrl: buildUrl + "/Build Two Electric Boogaloo.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Baking with marigolds",
