--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Baking with marigolds</title>
+    <title>Unity WebGL Player | Pansy Kitchen</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,19 +22,19 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Baking with marigolds</div>
+        <div id="unity-build-title">Pansy Kitchen</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build Two Electric Boogaloo.loader.js";
+      var loaderUrl = buildUrl + "/bdsgshjdjhdjhgddghbfdhnfdngdngfd.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build Two Electric Boogaloo.data.br",
-        frameworkUrl: buildUrl + "/Build Two Electric Boogaloo.framework.js.br",
-        codeUrl: buildUrl + "/Build Two Electric Boogaloo.wasm.br",
+        dataUrl: buildUrl + "/bdsgshjdjhdjhgddghbfdhnfdngdngfd.data",
+        frameworkUrl: buildUrl + "/bdsgshjdjhdjhgddghbfdhnfdngdngfd.framework.js",
+        codeUrl: buildUrl + "/bdsgshjdjhdjhgddghbfdhnfdngdngfd.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Baking with marigolds",
+        productName: "Pansy Kitchen",
         productVersion: "1.0",
       };
 
