--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/completetion.loader.js";
+      var loaderUrl = buildUrl + "/themarchfifthbuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/completetion.data",
-        frameworkUrl: buildUrl + "/completetion.framework.js",
-        codeUrl: buildUrl + "/completetion.wasm",
+        dataUrl: buildUrl + "/themarchfifthbuild.data",
+        frameworkUrl: buildUrl + "/themarchfifthbuild.framework.js",
+        codeUrl: buildUrl + "/themarchfifthbuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Pansy Kitchen",
